fix(sdds-footer): link font fix, vertically aligned text and removed console.log

--- a/tegel/src/components/footer/webcomponent/sdds-footer-link-group/sdds-footer-link-group.scss
+++ b/tegel/src/components/footer/webcomponent/sdds-footer-link-group/sdds-footer-link-group.scss
@@ -75,6 +75,7 @@
 
     button.footer-top-title-button {
       display: flex;
+      align-items: center;
     }
   }
 }
