--- a/tegel/src/components/footer/webcomponent/sdds-footer-link/sdds-footer-link.scss
+++ b/tegel/src/components/footer/webcomponent/sdds-footer-link/sdds-footer-link.scss
@@ -20,7 +20,8 @@
   &.top-part-child {
     a {
       color: var(--sdds-footer-top-links);
-      font-family: 'Scania Sans Semi Condensed';
+      font-family: 'Scania Sans Semi Condensed', 'Scania Sans Condensed', arial, helvetica,
+        sans-serif;
       font-weight: bold;
       font-size: 14px;
       line-height: 18px;
